lille til stort

--- a/Projekt5/HTML/kontakt.html
+++ b/Projekt5/HTML/kontakt.html
@@ -2,8 +2,8 @@
 <html lang="da">
 
 <head>
-    <link rel="stylesheet" href="../css/kontakt.css">
-    <link rel="stylesheet" href="../css/projekt5.css">
+    <link rel="stylesheet" href="../CSS/kontakt.css">
+    <link rel="stylesheet" href="../CSS/projekt5.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
