--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -7,8 +7,8 @@
       type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/produktside.css" />
-    <link rel="stylesheet" href="../css/projekt5.css">
+    <link rel="stylesheet" href="../CSS/produktside.css" />
+    <link rel="stylesheet" href="../CSS/projekt5.css">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta charset="utf-8" />
     <title>Produkt</title>
@@ -18,7 +18,7 @@
     <div class="transition transition-1 is-active"></div>
     <header>
       <div class="container">
-        <a href="..//index.html"
+        <a href="../index.html"
           ><h1 class="brand">
             Den Fynske <br />
             Trædrejer
@@ -61,14 +61,14 @@
                 <li class="carousel_slide current-slide">
                   <img
                     class="carousel_image"
-                    src="../img/bordbillede.png"
+                    src="../IMG/bordbillede.png"
                     alt="træbord"
                   />
                 </li>
                 <li class="carousel_slide">
                   <img
                     class="carousel_image"
-                    src="../img/bordbillede2.png"
+                    src="../IMG/bordbillede2.png"
                     alt="træbord"
                   />
                 </li>
