--- a/Projekt5/index.html
+++ b/Projekt5/index.html
@@ -18,7 +18,7 @@
   <header>
     <div class="container">
       <a href="index.html"></a>
-        ><h1 class="brand">
+        <h1 class="brand">
           Den Fynske <br />
           Trædrejer
         </h1></a>
