--- a/Projekt5/index.html
+++ b/Projekt5/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="container">
-      <a href="index.html"></a>
+      <a href="index.html">
         <h1 class="brand">
           Den Fynske <br />
           Trædrejer
